--- a/styles/Songs.module.css
+++ b/styles/Songs.module.css
@@ -16,7 +16,8 @@
   margin: 6px 0;
 }
 
-.link:hover, .link:focus {
+.link:hover,
+.link:focus {
   background-color: rgba(0, 0, 0, 0.08);
 }
 
@@ -48,7 +49,6 @@
 }
 
 .title {
-  
 }
 
 .artist {
@@ -57,7 +57,24 @@
 
 @media (min-width: 960px) {
   .songs {
-      max-width: 960px;
-      margin: 0 auto;
+    max-width: 960px;
+    margin: 0 auto;
   }
+}
+
+.header {
+  background-color: var(--bg-dark);
+  min-height: 60px;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.logo {
+}
+
+.logo span {
+  color: var(--prime);
 }
